correctly align tables in the preview, e.g. Vorlage/Bildersammlung. fixes #224

--- a/inyoka/static/style/main.less
+++ b/inyoka/static/style/main.less
@@ -353,8 +353,14 @@ table tbody th,table tbody td {
   border-width: 1px 0;
   vertical-align: middle;
 }
-.preview table td {
-    border-width: 1px;
+.preview {
+  table {
+    margin: 1em;
+    width: auto;
+    td {
+      border-width: 1px;
+    }
+  }
 }
 .feed_icon {
   float: right;
